💄 Fix offcanvas being hidden behind cms toolbar

--- a/frontend/styles/misc.scss
+++ b/frontend/styles/misc.scss
@@ -64,3 +64,7 @@
       transform: scale(1) rotate(1090deg);
   }
 }
+
+.cms-toolbar-expanded .offcanvas {
+  top: 46px;
+}
